Arreglos de bugs

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <h2>Accesorios</h2>
       <p>Agregar accesorio a un usuario</p>
 
-      <form class="form-accesorios" action="/php/add_accesory.php" method="POST">
+      <form class="form-accesorios" action="php/add_accesory.php" method="POST">
 
         <label for="workday_id">Workday ID</label>
         <input type="text" name="workday_id" id="workday_id" placeholder="Workday ID" required>
