Agregado de Usuario como primario

--- a/index.html
+++ b/index.html
@@ -97,6 +97,20 @@
           placeholder="Numero de Serie"
           required
         />
+        <label for="mail">Mail</label>
+        <input
+          type="text"
+          name="mail"
+          id="mail"
+          placeholder="Mail"
+        />
+        <label for="usuario">Usuario</label>
+        <input
+          type="text"
+          name="usuario"
+          id="usuario"
+          placeholder="Usuario"
+        />
         <input type="submit" value="Enviar" />
       </form>
     </section>
