--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
 
         <label for="accesorio">Accesorio</label>
         <select name="accesorio" id="accesorio" required>
-          <option value="monitor">Monitor</option>
-          <option value="mouse">Mouse</option>
-          <option value="silla">Silla</option>
-          <option value="teclado">Teclado</option>
-          <option value="auriculares">Auriculares</option>
-          <option value="otros">Otros</option>
+          <option value="Monitor">Monitor</option>
+          <option value="Mouse">Mouse</option>
+          <option value="Silla">Silla</option>
+          <option value="Teclado">Teclado</option>
+          <option value="Auriculares">Auriculares</option>
+          <option value="Otros">Otros</option>
         </select>
 
         <label for="detalle" id="label-detalle">Detalle</label>
