--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             <span class="link-text">Accesorios</span>
           </button>
         </li>
+        <li class="nav-item" id="nav-borrar">
+          <button class="nav-link" id="btn-borrar" >
+            <i class="fas fa-trash"></i>
+            <span class="link-text">Borrar</span>
+          </button>
+        </li>
         <li class="nav-item">
           <a href="./templates/rrhh.html" class="nav-link" id="btn-accesorios">
             <i class="fas fa-person"></i>
@@ -161,6 +167,21 @@
 
       </form>
 
+    </section>
+
+    <section id="seccion-borrar" class="seccion-borrar" method="POST">
+      <h2>Borrar usuario</h2>
+      <form class="form-borrar" action="php/delete_user.php" method="post">
+        <label for="workday_id">Workday ID</label>
+        <input
+          type="text"
+          name="workday_id"
+          id="workday_id"
+          placeholder="Workday ID"
+          required
+        />
+        <input type="submit" value="Borrar" />
+      </form>
     </section>
 
     <script src="js/app.js"></script>
